# grpc-dgl-client

./: .gitignore  Cargo.toml  Dockerfile
src/: lib.rs  main.rs
src/event/: aws_delete_mock_face_scan_8_sec.rs  aws_mock_face_scan_8_sec.rs  echo.rs  gcp_clear_dynamic_reject.rs  gcp_delete_loan_appid.rs  mod.rs
src/helper/: gcp_db_connection.rs  mod.rs
