[package]
name = "grpc-client"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
prost = "0.14.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.18"
tonic = "0.14.2"
tonic-prost = "0.14.2"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "mysql",
  "tls-native-tls",
] }

[build-dependencies]
tonic-prost-build = "0.14.2"
