[package]
name = "grpc_client"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
prost = "0.14.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.18"
tonic = { version = "0.14.2", features = [
  "transport",
  "tls-webpki-roots",
  "tls-ring",
] }
tonic-prost = "0.14.2"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "mysql",
  "tls-native-tls",
] }
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1.0.149"

[build-dependencies]
tonic-prost-build = "0.14.2"
